survey-salesforce/salesforce-app/src/objects/SurveyVersion__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deprecated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>SurveyVersions</relationshipLabel>
        <relationshipName>SurveyVersions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SurveyVersion</label>
    <nameField>
        <displayFormat>SV-{0000000000}</displayFormat>
        <label>Survey Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SurveyVersions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>